Clean up services page, update email

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: SmartMoneyAI
 title: AI Automation for Business
 description: We help businesses automate operations, build AI employees, and scale with artificial intelligence.
 author: Paul
-email: smartmoneyai@proton.me
+email: smartmoneyai.org@pm.me
 permalink: /:title/
 future: true
 defaults:
